Described latest changes in docs/Changes.txt
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@4 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/docs/Changes.txt
+++ b/docs/Changes.txt
@@ -16,6 +16,13 @@ outlining the platform specific changes.
 Section:   New in release 0.94.2
 ----------------------------------------------------------------------
 
+Added missing newline after "no output file specified" message.
+Fixed bug in "!to" and "!sl" (colon in filename is interpreted as command
+    separator in later passes).
+Changed verbose output hex prefix from $ to 0x.
+Changed --help output
+Changed EOR to XOR in docs and comments (the ACME operator, not the 6502
+    opcode)
 
 
 ----------------------------------------------------------------------
