"Target out of range" errors now output how far off.
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@6 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/docs/Changes.txt
+++ b/docs/Changes.txt
@@ -13,6 +13,14 @@ outlining the platform specific changes.
 
 
 ----------------------------------------------------------------------
+Section:   New in release 0.94.3
+----------------------------------------------------------------------
+
+"Target out of range" error now includes info on how much the range was
+exceeded. Thanks to Bitbreaker/VOZ for the suggestion.
+
+
+----------------------------------------------------------------------
 Section:   New in release 0.94.2
 ----------------------------------------------------------------------
 
