committed docs I forgot in last update
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@8 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/docs/Changes.txt
+++ b/docs/Changes.txt
@@ -13,6 +13,13 @@ outlining the platform specific changes.
 
 
 ----------------------------------------------------------------------
+Section:   New in release 0.94.4
+----------------------------------------------------------------------
+
+Added "apple" output format.
+
+
+----------------------------------------------------------------------
 Section:   New in release 0.94.3
 ----------------------------------------------------------------------
 
