--- a/docs/Changes.txt
+++ b/docs/Changes.txt
@@ -13,6 +13,13 @@ outlining the platform specific changes.
 
 
 ----------------------------------------------------------------------
+Section:   New in release 0.94.6
+----------------------------------------------------------------------
+
+Made "power-of" operator right-associative.
+
+
+----------------------------------------------------------------------
 Section:   New in release 0.94.5
 ----------------------------------------------------------------------
 
