--- a/docs/Changes.txt
+++ b/docs/Changes.txt
@@ -13,6 +13,17 @@ outlining the platform specific changes.
 
 
 ----------------------------------------------------------------------
+Section:   New in release 0.94.7
+----------------------------------------------------------------------
+
+Fixed bug: Setting the program counter to an address > $ffff and
+    writing a byte hung ACME. Thanks to groepaz/VICEteam for reporting
+    this.
+Verbose output now uses "0x" instead of "$" to indicate hexadecimal in
+    more places.
+
+
+----------------------------------------------------------------------
 Section:   New in release 0.94.6
 ----------------------------------------------------------------------
 
@@ -24,7 +35,7 @@ Section:   New in release 0.94.5
 ----------------------------------------------------------------------
 
 Fixed bug: wrap-around branches (from $ff80+ to zp and back) were
-    reported as errors. Thanks to Bitbreaker for reporting this.
+    reported as errors. Thanks to Bitbreaker/VOZ for reporting this.
 Fixed bug: left-shifting float values went wrong for large shifts.
 New error message: "Target not in bank (0xTARGET)" for branches.
 Fixed example program to get it to assemble with current library.
