--- a/docs/Changes.txt
+++ b/docs/Changes.txt
@@ -13,6 +13,15 @@ outlining the platform specific changes.
 
 
 ----------------------------------------------------------------------
+Section:   New in release 0.94.10
+----------------------------------------------------------------------
+
+Warning about shift-space as first character of label name now works
+    for UTF-8 as well.
+Operator priority list in docs now contains built-in function calls.
+
+
+----------------------------------------------------------------------
 Section:   New in release 0.94.9
 ----------------------------------------------------------------------
 
