--- a/docs/Changes.txt
+++ b/docs/Changes.txt
@@ -13,6 +13,14 @@ outlining the platform specific changes.
 
 
 ----------------------------------------------------------------------
+Section:   New in release 0.95.4
+----------------------------------------------------------------------
+
+Added the last remaining undocumented ("illegal") opcodes: LAS, TAS,
+    SHA, SHX, SHY and ANE.
+
+
+----------------------------------------------------------------------
 Section:   New in release 0.95.3
 ----------------------------------------------------------------------
 
