updated "toacme" sources to version 0.9 from 2006-03-12 (improved Giga-Assembler conversion)
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@57 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/contrib/toacme/docs/CHANGES
+++ b/contrib/toacme/docs/CHANGES
@@ -1,4 +1,9 @@
 
+2006-03-12
+	Release 0.9
+	Improved "Giga Assembler" mode. Thanks to Andreas Paul for his help.
+	Fixed unimportant bug: Attempted to close output file twice.
+
 2005-06-16
 	Release 0.8
 	Merged all converters into one program ("toacme").
