updated "toacme" sources to version 0.10 from 2006-10-04 (better support for illegals)
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@58 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/contrib/toacme/docs/CHANGES
+++ b/contrib/toacme/docs/CHANGES
@@ -1,4 +1,8 @@
 
+2006-10-04
+	Release 0.10
+	Adjusted support for illegals to latest changes in ACME.
+
 2006-03-12
 	Release 0.9
 	Improved "Giga Assembler" mode. Thanks to Andreas Paul for his help.
