updated "toacme" sources to version 0.11 from 2012-10-08 (source cleanup)
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@59 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/contrib/toacme/docs/CHANGES
+++ b/contrib/toacme/docs/CHANGES
@@ -1,4 +1,8 @@
 
+2012-10-08
+	Release 0.11
+	Beautified source, and added space after ',' in addressing modes.
+
 2006-10-04
 	Release 0.10
 	Adjusted support for illegals to latest changes in ACME.
