updated "toacme" sources to current version (release 0.12 from 2015-02-04), now including a converter for "VisAss".
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@60 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/contrib/toacme/docs/CHANGES
+++ b/contrib/toacme/docs/CHANGES
@@ -1,4 +1,10 @@
 
+2015-02-04
+	Release 0.12
+	Added "VisAss" converter mode.
+	Removed "umlaut fixing" and just went ahead with UTF-8.
+	Fixed home page (used the ACME sourceforge page).
+
 2012-10-08
 	Release 0.11
 	Beautified source, and added space after ',' in addressing modes.
