--- a/contrib/toacme/docs/README
+++ b/contrib/toacme/docs/README
@@ -36,13 +36,10 @@ using ACME. In such cases, ToACME can be used to convert the source
 code files to ACME format.
 
 
-Use
----
+Syntax and use
+--------------
 
-ToACME can be invoked in two ways:
-
-toacme
-toacme <input format ID> <input file> <output file>
+./toacme  FORMAT_ID  INPUT_FILE  OUTPUT_FILE
 
 Calling ToACME without any arguments will show a short message
 containing copyright information and a list of all known input
@@ -66,17 +63,30 @@ Known input formats
 
 Currently, ToACME supports these input file formats:
 
-format_id   source file format             quality
+Format ID:  source file format             quality
 --------------------------------------------------
+object      object code files                 poor
+hypra       C64: Hypra-Assembler                ok
+giga        C64: Giga-Assembler                 ok
+vis         C64: VisAss                   untested
 ab3         C64: AssBlaster 3.0 to 3.2        good
 f8ab        C64: Flash8-AssBlaster              ok
-giga        C64: Giga-Assembler      needs testing
-hypra       C64: Hypra-Assembler                ok
-object      object code files                 poor
+
 
 
 Contacting the author
 ---------------------
 
+The newest version can be found at the ACME homepage:
+http://sourceforge.net/projects/acme-crossass/
+
 If you want to report a bug or make a suggestion, then simply send
 an email to marco@baye.de
+
+
+Credits
+-------
+
+Thanks to Stefan Hübner for fixing the AssBlaster macro conversion code.
+Thanks to Andreas Paul for helping with the Giga-Assembler mode.
+Thanks to Arndt Dettke for helping with the Hypra-Assembler mode.
